--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
 .DS_Store
 /node_modules/
 .sass-cache
+/scss/screen.css.map
+/scss/print.css.map
+/assets/css/scss/screen.css.map
+/assets/css/scss/print.css.map
+/assets/css/scss/ie.css.map
