--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "WP-Fondamenta-Bootstrap",
-  "version": "1.8.6",
+  "version": "1.8.7",
   "private": true,
   "author": "DOT agency <federico@dot-agency.it>",
   "homepage": "http://dot-agency.it",
@@ -33,6 +33,7 @@
     "autoprefixer": "^7.1.2",
     "postcss-sorting": "^3.0.1",
     "postcss-cssnext": "latest",
-    "pixrem": "^3.0.2"
+    "pixrem": "^3.0.2",
+    "grunt-contrib-copy": "latest"
   }
 }
