--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "WP-Fondamenta-Bootstrap",
-  "version": "1.8.7",
+  "version": "1.9",
   "private": true,
   "author": "DOT agency <federico@dot-agency.it>",
   "homepage": "http://dot-agency.it",
@@ -27,13 +27,13 @@
     "grunt-postcss": "^0.8.0",
     "grunt-contrib-imagemin": "^1.0.1",
     "grunt-contrib-sass": "^1.0.0",
-    "grunt-wp-version": "latest",
     "grunt-contrib-cssmin": "^1.0.2",
     "cssnano": "^3.10.0",
     "autoprefixer": "^7.1.2",
     "postcss-sorting": "^3.0.1",
     "postcss-cssnext": "latest",
     "pixrem": "^3.0.2",
-    "grunt-contrib-copy": "latest"
+    "grunt-contrib-copy": "latest",
+    "grunt-svgmin": "latest"
   }
 }
